# pytextractor

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  text_detection.py
.claude/: settings.local.json
.github/workflows/: pypi-pkg.yaml  python-package.yml
pytextractor/: pytextractor.py  text_detection.py
test/: test_detector.py
tests/: test_detector.py
